<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liquidity</string>

    <string name="activity_about_title">About Liquidity</string>
    <string name="activity_add_players_title">Add Players</string>
    <string name="activity_games_title">Liquidity</string>
    <string name="activity_join_game_title">Join Game</string>
    <string name="activity_board_game_title">Unnamed Game</string>
    <string name="activity_preferences_title">Settings</string>
    <string name="activity_receive_identity_title">Receive Identity</string>
    <string name="activity_transfer_identity_title">Transfer Identity</string>

    <string name="about">Help &amp; acknowledgements</string>
    <string name="acknowledgement_copyright_and_license_format_string">%1$s\n\n%2$s</string>
    <string name="acknowledgements_content">The transfer receipt cash register sound is gratefully used under license from http://www.freesfx.co.uk.\n\nLiquidity is built around the following open source libraries. Big thanks go to these giants whose shoulders we stand on:</string>
    <string name="acknowledgements_title">Acknowledgements &amp; Licences</string>
    <string name="add_players">Add players</string>
    <string name="add_players_game_name_format_string">Show the QR code to the joining players to admit them to %1$s.</string>
    <string name="all">All</string>
    <string name="bank_member_name">Bank</string>
    <string name="camera_permission_rationale">Camera permission is required to scan Liquidity QR codes.</string>
    <string name="cancel">Cancel</string>
    <string name="change_game_name">Change game name</string>
    <string name="change_game_name_error_format_string">Couldn\'t change game name to %1$s!</string>
    <string name="change_identity_name">Change identity name</string>
    <string name="change_identity_name_error_format_string">Couldn\'t change identity name to %1$s!</string>
    <string name="choose_identity_to_restore">Choose identity to restore</string>
    <string name="create_game_error_format_string">Couldn\'t create game %1$s!</string>
    <string name="create_identity">Create identity</string>
    <string name="create_identity_account_error_format_string">Couldn\'t create account for identity %1$s!</string>
    <string name="create_identity_member_error_format_string">Couldn\'t create member for identity %1$s!</string>
    <string name="create_new_game">Create new game</string>
    <string name="currency_code_format_string">"%1$s "</string>
    <string name="currency_value_format_string">%1$s%2$s%3$s</string>
    <string name="delete">Delete</string>
    <string name="delete_identity">Delete identity</string>
    <string name="delete_identity_error_format_string">Couldn\'t delete identity %1$s!</string>
    <string name="delete_identity_message">You can always restore deleted identities via the menu later.</string>
    <string name="delete_identity_title_format_string">Delete %1$s?</string>
    <string name="enter_game_details">Enter game details</string>
    <string name="enter_game_name">Enter game name</string>
    <string name="enter_identity_name">Enter identity name</string>
    <string name="enter_transfer_details">Enter transfer details</string>
    <string name="game_created_format_string">Created %1$s</string>
    <string name="game_currency">Currency</string>
    <string name="game_currency_format_string">%1$s (%2$s)</string>
    <string name="game_currency_symbol_and_name_format_string">%1$s, %2$s</string>
    <string name="game_expires_format_string">(expires %1$s)</string>
    <string name="game_name">Name</string>
    <string name="group_transfer">Group transfer</string>
    <string name="identity_format_string">%1$s (%2$s available)</string>
    <string name="join_existing_game">Join existing game</string>
    <string name="join_game_error">"Couldn't join game - are you sure it\'s a Liquidity game?"</string>
    <string name="join_game_instruction">Scan the QR code on the host\'s phone.</string>
    <string name="join_state_available">The connection was closed.</string>
    <string name="join_state_connecting">Connecting</string>
    <string name="join_state_creating">Creating game</string>
    <string name="join_state_disconnecting">Disconnecting</string>
    <string name="join_state_general_failure">The connection failed.</string>
    <string name="join_state_joining">Joining game</string>
    <string name="join_state_quitting">Quitting game</string>
    <string name="join_state_tls_error">Could not establish a secure connection. Ensure you are using the latest version of Liquidity.</string>
    <string name="join_state_unavailable">Liquidity requires a data connection, but none is available.</string>
    <string name="join_state_unsupported_version">This version is no longer supported. Ensure you are using the latest version of Liquidity.</string>
    <string name="join_state_waiting_for_version_check">Checking version</string>
    <string name="no_games">You don\'t have any saved games. Click the button below to create or join one.</string>
    <string name="no_identities">You don\'t have any identities. Touch here to create one.</string>
    <string name="no_last_transfer">Click a player to send money to them.</string>
    <string name="no_other_players">No one else has joined yet. Touch here to invite them.</string>
    <string name="no_transfers">No transfers have been made yet.</string>
    <string name="non_player_transfer_location_format_string">account %1$d (%2$s)</string>
    <string name="ok">OK</string>
    <string name="play_transfer_receipt_sounds_summary">Only when the screen is on</string>
    <string name="play_transfer_receipt_sounds_title">Play transfer receipt sounds</string>
    <string name="player_connected">(connected)</string>
    <string name="player_disconnected">(disconnected)</string>
    <string name="preferences">Settings</string>
    <string name="privacy_content">Liquidity\'s privacy policy can be viewed at https://www.dhpcs.com/liquidity/privacy.\n\nBy using Liquidity you accept the policy.</string>
    <string name="privacy_title">Privacy</string>
    <string name="quit_game_error">Couldn\'t quit game!</string>
    <string name="receive_identity">Receive identity</string>
    <string name="receive_identity_instruction">Show the QR code to the sender.</string>
    <string name="reconnect">Reconnect</string>
    <string name="restore_identity">Restore identity</string>
    <string name="restore_identity_error_format_string">Couldn\'t restore identity %1$s!</string>
    <string name="settings">Settings</string>
    <string name="terminology_content"><i>Identities</i> are accounts that you control and are displayed on the green area in each game. If you have multiple identities you can switch between them by swiping the current identity left or right.\n\nGenerally the creator of a game will have two identities (one representing the bank, and one representing them) while everyone else will have one identity. However, identities can be created as required at any point (or deleted, or transferred between devices). This allows one phone to represent multiple players in the case where not everyone has a suitable phone.\n\nOther players\' accounts are shown in the white area below your currently selected identity.\n\nA <i>transfer</i> is a payment from one account to another. The simplest way to make a transfer is to tap the name of the intended recipient in the players list. It\'s also possible to make a single payment to multiple recipients by clicking the \"Group transfer\" option in the menu. Transfer history can be viewed by clicking or swiping the blue panel below the players\' list.\n\nThe money supply is limitless. This means the bank starts with a balance of zero and it can always make payments.</string>
    <string name="terminology_title">Terminology</string>
    <string name="transfers">Transfers</string>
    <string name="transfer_amount">Amount</string>
    <string name="transfer_created_date_format_string">(%1$s)</string>
    <string name="transfer_created_time_format_string">%1$s</string>
    <string name="transfer_from">From</string>
    <string name="transfer_from_invalid_format_string">Cannot transfer from %1$s to %1$s</string>
    <string name="transfer_identity">Transfer identity</string>
    <string name="transfer_identity_error_format_string">Couldn\'t transfer identity %1$s!</string>
    <string name="transfer_identity_identity_name_format_string">Scan the QR code on the recipients\'s phone to transfer %1$s to them.</string>
    <string name="transfer_identity_invalid_code_format_string">"That's not a player connected to %1$s!"</string>
    <string name="transfer_summary_format_string">%1$s sent %2$s to %3$s</string>
    <string name="transfer_summary_received_from_format_string">Received %1$s from %2$s</string>
    <string name="transfer_summary_sent_to_format_string">Sent %1$s to %2$s</string>
    <string name="transfer_to">To</string>
    <string name="transfer_to_player_error_format_string">Couldn\'t transfer to player %1$s!</string>
    <string name="transfer_to_player_scaled_value_format_string">(%1$s)</string>
    <string name="transfer_value_invalid_format_string">Balance is %1$s but this would require %2$s</string>
    <string name="unnamed">Unnamed</string>
    <string name="value_multiplier_billion">B</string>
    <string name="value_multiplier_million">M</string>
    <string name="value_multiplier_thousand">K</string>
    <string name="value_multiplier_trillion">T</string>
    <string name="value_multiplier_quadrillion">Q</string>

</resources>
