<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dhpcs.liquidity.activities.MonopolyGameActivity">
    <item
        android:id="@+id/action_add_players"
        android:orderInCategory="100"
        android:title="@string/add_players"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_game_name"
        android:orderInCategory="100"
        android:title="@string/change_game_name"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_identity_name"
        android:orderInCategory="100"
        android:title="@string/change_identity_name"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_extra_identity"
        android:orderInCategory="100"
        android:title="@string/create_extra_identity"
        android:visible="false"
        app:showAsAction="never" />
</menu>
